# tuinfeestbeerse.be

./: .gitignore  .project  .pydevproject  404.html  CNAME  Cargo.toml  README.md  TODO.txt  beersbegot.html  beersbegot.html~  beersbegot2.html  beersbegot2.html~  conf.py  generate.go  go.mod  go.sum  index.html  index.src.html  main.go  melthon_watch.sh  renovate.json  requirements.txt  robots.txt  sitemap.xml  sitemapindex.xml  timetable.py
.circleci/: config.yml
.github/: dependabot.yml
beersbegot/: beersbegot.css  beersbegot.css~  responsive.css  style.css
data/: Artists.yml  General.yml  Privacy.yml  Sponsors.yml  Timetable.yml  artists.go  artists.yml  data.go  football.yml  general.go  general.yml  sponsors.go  sponsors.yml  timetable.go  timetable.yml
directus-data/: artist_links.json  artists.json  carousel_files.json  general_settings.json  performances.json  pull.sh  push.sh  sponsors.json  stages.json
files/: beersbegot2.html
generator/: data.go  dir_utils.go  templates.go
helpers/: jpg_opt.sh  melthon_watch.sh
huisreglement/: index.html
images/: logo.png.bak
middleware/: timetable.py
old/: go.mod  go.sum  main.go
pages/: index.html
preprocess/: timetable.go  utils.go
schemas/: directus.graphql
src/: api_client.rs  main.rs  timetable.rs
templates/: 404.html.jinja2  base.html.jinja2  component.base.html  component.footer.html  goatcounter.component.html  huisreglement.html.jinja2  index.about.component.html  index.component.about.html  index.component.artists.html  index.component.carousel.html  index.component.info.html  (+10 more)
(+144 files in other folders)
