[package]
name = "tuinfeestbeerse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
cynic = { version = "3.5", features = ["http-reqwest-blocking"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
rayon = "1.9.0"
reqwest = { version = "0.12", features = ["blocking"] }
serde = "1.0.197"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }

[build-dependencies]
cynic-codegen = { version = "3" }

[dev-dependencies]
pretty_assertions = { version= "1.4" }
