[package]
name = "tuinfeestbeerse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12"
cynic = { version = "3.9", features = ["http-reqwest-blocking"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
reqwest = { version = "0.13", features = ["blocking"] }
serde = "1.0"
time = { version = "0.3", features = ["macros", "parsing", "formatting"] }

[build-dependencies]
cynic-codegen = { version = "3.9" }

[dev-dependencies]
pretty_assertions = { version= "1.4" }
